# CloudRenderer

./: .gitmodules  AssetCache.cpp  CMakeLists.txt  CMakePresets.json  Log.h  Main.cpp
Core/: FixedUpdate.h  FrameParams.h  Game.cpp  Game.h  Mesh.h  Scene.cpp  Scene.h
Core/Events/: EventData.h  EventManager.cpp
Core/Threading/: JobSystem.cpp  JobSystem.h
Core/Threading/DataStructures/: MultithreadQueue.h  MultithreadQueue.inc  MultithreadedVector.h  MultithreadedVector.inc
D3D11Renderer/: CMakeLists.txt  D3D11SpatiotemporalFilter.cpp  PathTracerCbs.h  ShaderStructures.h
D3D11SpatiotemporalFilter/: CBStructures.h  D3D11SpatiotemporalFilter.cpp  D3D11SpatiotemporalFilter.h  RenderPasses.h
Farlor/: CMakeLists.txt
Farlor/AssetPipeline/: CMakeLists.txt
Farlor/AssetPipeline/AssetUtils/: CMakeLists.txt  Mesh.h  PBRTParser.cpp  PBRTParser.h  parser.cpp  parser.h
Farlor/AssetPipeline/PBRTPackager/: CMakeLists.txt  Main.cpp
Farlor/Input/: CMakeLists.txt  ControllerButton.h  ControllerManager.cpp  ControllerManager.h  InputState.cpp  InputState.h  InputStateManager.cpp  InputStateManager.h
Farlor/Renderer/: CMakeLists.txt  Camera.cpp  Camera.h  CameraEntry.h  CameraManager.cpp  CameraManager.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  FrameGraph.cpp  FrameGraph.h  GenericCbs.h  Geometry.cpp  Geometry.h  IGraphicsBackend.cpp  IGraphicsBackend.h  LightSet.cpp  LightSet.h  ObjMesh.cpp  ObjMesh.h  PointLightComponent.cpp  PointLightComponent.h  RenderComponent.cpp  RenderComponent.h  RenderParams.h  Renderer.cpp  Renderer.h  SwapChain.cpp  TriMesh.cpp  TriMesh.h  Vertex.cpp  Vertex.h  VisibleSet.cpp  VisibleSet.h
Farlor/Renderer/D3D11Backend/: CBStructures.h  CMakeLists.txt  D3D11Backend.cpp  D3D11Backend.h  D3D11Geometry.cpp  D3D11Geometry.h  D3D11ResourceFactory.cpp  D3D11ResourceFactory.h
Farlor/Renderer/D3D11Utils/: CMakeLists.txt  D3D11GpuProfiler.cpp  D3D11GpuProfiler.h  DebugUtils.h
Farlor/Util/: CMakeLists.txt  EnvVariable.cpp  EnvVariable.h  FCompress.cpp  FCompress.h  FEnvVar.cpp  FEnvVar.h  FHash.cpp  FHash.h  HashedString.cpp  HashedString.h  Logger.h  StateMonitor.h  StateMonitor.inl  StateMonitorArray.h  StateMonitorArray.inl  StringID.cpp  StringID.h  StringUtil.cpp  StringUtil.h  Timer.cpp  Timer.h
Farlor/Window/: CMakeLists.txt  IWindow.h  WindowFactory.cpp  WindowFactory.h
Farlor/Window/Win32/: Win32Window.cpp  Win32Window.h
Farlor/World/: AreaLight.cpp  AreaLight.h  CMakeLists.txt  Mesh.cpp  SceneGraph.cpp  SceneGraph.h  Transform.cpp  Transform.h  World.cpp  World.h
Utils/: TinyXmlUtil.cpp  TinyXmlUtil.h
assets/models/: Models.xml
assets/shaders/: CloudLookup.hlsl  CloudParams.hlsl  CloudTrace.hlsl  GeneratePrimaryRays.hlsl  Reprojection.hlsl  TonemappingPass.hlsl  VertexTransform.hlsl
assets/shaders/hlsl/: ClearHDRStructuredBuffer.hlsl  CloudLighting.hlsl  STD_GeometryDeferred.hlsl
assets/shaders/hlsl/snippits/: BRDF.hlsl  ColorSpaceConversions.hlsl  Constants.hlsl  CookTorrence.hlsl  Fresnel.hlsl  FullScreenTriVS.hlsl  Geometry.hlsl  RandomNumberSupport.hlsl  SnellsLawVector.hlsl
assets/shaders/snippits/: Distribution.hlsl  PBRLighting.hlsl  RandomNumbers.hlsl  Sampling.hlsl  ShadowMasking.hlsl  SnellsLaw.hlsl  TonemappingFunctions.hlsl  WetSurfaceFunctions.hlsl
assets/textures/: curlNoise.DDS  weatherMap.DDS
assets/textures/HighFrequency/: HighFrequency.dds
tools/: CMakeLists.txt  playstationControllerTest.cpp
